ross2121.DB.c961de8626ec11f38735e0754d4234fab05aa0da
Running as unit: run-p2583344-i15163434.scope; invocation ID: fc76cb6ed50746c8b56b58ca8b90fcae
    Blocking waiting for file lock on package cache
   Compiling proc-macro2 v1.0.101
   Compiling unicode-ident v1.0.18
   Compiling autocfg v1.5.0
   Compiling libc v0.2.175
    Checking stable_deref_trait v1.2.0
    Checking smallvec v1.15.1
   Compiling serde v1.0.219
    Checking litemap v0.8.0
    Checking memchr v2.7.5
    Checking writeable v0.6.1
   Compiling icu_normalizer_data v2.0.0
   Compiling num-traits v0.2.19
   Compiling icu_properties_data v2.0.1
    Checking cfg-if v1.0.3
   Compiling ident_case v1.0.1
   Compiling fnv v1.0.7
   Compiling strsim v0.11.1
   Compiling lock_api v0.4.13
   Compiling parking_lot_core v0.9.11
   Compiling quote v1.0.40
    Checking scopeguard v1.2.0
    Checking aho-corasick v1.1.3
   Compiling syn v2.0.106
    Checking regex-syntax v0.8.6
    Checking num-integer v0.1.46
    Checking utf8_iter v1.0.4
    Checking log v0.4.28
    Checking parking_lot v0.12.4
    Checking itoa v1.0.15
    Checking percent-encoding v2.3.2
   Compiling getrandom v0.3.3
   Compiling libm v0.2.15
    Checking form_urlencoded v1.2.2
    Checking num-bigint v0.4.6
   Compiling proc-macro-error-attr2 v2.0.0
   Compiling bigdecimal v0.4.8
    Checking bytes v1.10.1
   Compiling either v1.15.0
   Compiling heck v0.5.0
    Checking regex-automata v0.4.10
    Checking utf8parse v0.2.2
   Compiling serde_json v1.0.143
    Checking ryu v1.0.20
   Compiling pq-sys v0.7.2
    Checking anstyle-parse v0.2.7
    Checking scheduled-thread-pool v0.2.7
    Checking is_terminal_polyfill v1.70.1
    Checking anstyle v1.0.11
    Checking anstyle-query v1.1.4
   Compiling once_cell v1.21.3
    Checking colorchoice v1.0.4
    Checking iana-time-zone v0.1.63
    Checking anstream v0.6.20
    Checking r2d2 v0.8.10
    Checking combine v4.6.7
    Checking signal-hook-registry v1.4.6
    Checking mio v1.0.4
    Checking socket2 v0.5.10
    Checking socket2 v0.6.0
    Checking pin-project-lite v0.2.16
    Checking jiff v0.2.15
    Checking bitflags v2.9.4
    Checking byteorder v1.5.0
    Checking sha1_smol v1.0.1
    Checking arc-swap v1.7.1
    Checking regex v1.11.2
    Checking dotenvy v0.15.7
    Checking dotenv v0.15.0
    Checking env_filter v0.1.3
   Compiling synstructure v0.13.2
   Compiling darling_core v0.20.11
   Compiling diesel_table_macro_syntax v0.2.0
   Compiling proc-macro-error2 v2.0.1
    Checking env_logger v0.11.8
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
   Compiling serde_derive v1.0.219
   Compiling tokio-macros v2.5.0
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
    Checking tokio v1.47.1
   Compiling darling_macro v0.20.11
    Checking zerovec v0.11.4
    Checking zerotrie v0.2.2
   Compiling darling v0.20.11
   Compiling dsl_auto_type v0.1.3
   Compiling validator_derive v0.20.0
   Compiling diesel_derives v2.2.7
    Checking tinystr v0.8.1
    Checking icu_locale_core v2.0.0
    Checking potential_utf v0.1.3
    Checking icu_collections v2.0.0
    Checking icu_provider v2.0.0
    Checking icu_properties v2.0.1
    Checking icu_normalizer v2.0.0
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking url v2.5.7
    Checking uuid v1.18.1
    Checking chrono v0.4.41
    Checking redis v0.29.5
    Checking validator v0.20.0
    Checking diesel v2.2.12
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.12/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
